2009-03-16  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS: Evolution Exchange 2.26.0 release and version bump

2009-03-06  Tobias Mueller  <tobiasmue@gnome.org>

	* mail/Makefile.am:
	* addressbook/Makefile.am:
	* storage/Makefile.am:
	* calendar/Makefile.am:
	Changed order of the libs to link against to not pull system libs

	** Fixes bug #572950 (Patch by Daniel Macks)

2009-03-04  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #567852

	* calendar/e-cal-backend-exchange-tasks.c: (create_task_object):
	* calendar/e-cal-backend-exchange-calendar.c: (create_object): Don't
	add new CREATED, LAST-MODIFIED properties when event has one already.

2009-03-02  Matthew Barnes  <mbarnes@redhat.com>

	* configure.in: Post-release version bump.

2009-03-02  Milan Crha  <mcrha@redhat.com>

	* storage/exchange-config-listener.c: (update_foreign_uri):
	Runtime warning fix.

2009-03-02  Matthew Barnes  <mbarnes@redhat.com>

	* NEWS: Evolution Exchange 2.25.92 release

2009-02-13  Milan Crha  <mcrha@redhat.com>

	** Partial fix for bug #545455

	* mail-stub-exchange.c: (transfer_messages):
	Check for the correct href of the message before accessing it.

2009-02-09  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #432885

	* calendar/e-cal-backend-exchange.c: (open_calendar): Rescan foreign
	hierarchy same as personal one, to get list of shared calendars before
	giving up opening of the foreign calendar.

2009-02-03  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS, configure.in: Evolution Exchange 2.25.90 release

2009-02-02  Suman Manjunath  <msuman@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (create_object),
	(modify_object_with_href): Don't convert the icalcomponent body to
	CR-LF format, libical does that already.

2009-02-02  Suman Manjunath  <msuman@novell.com>

	** Part of fix for bug #568554

	* calendar/e-cal-backend-exchange-tasks.c (get_changed_tasks): Fix a 
	compiler warning introduced after the libical fork was dropped.
