@@ -1,3 +1,10 @@
+2009-04-24  Milan Crha  <mcrha@redhat.com>
+
+	** Part of fix for bug #563954
+
+	* camel/camel-exchange-folder.c: (cmp_uids), (class_init):
+	Define its own compare function for UIDs.
+
 2009-03-16  Srinivasa Ragavan  <sragavan@novell.com>
 
 	* NEWS: Evolution Exchange 2.26.0 release and version bump
